testsuite/tests/v1/fun_call/non_function_value/test.out
Error: Error from the Lua engine
   ╭─[ <working-dir>/script.lkql:2:7 ]
   │
 2 │ print(add(1, 2))
   │       ────┬────  
   │           ╰────── Attempt to call local 'add' (a string value)
───╯
